[project]
name = "autonomyx-deep-agent"
version = "0.1.0"
description = "Autonomyx Deep Agent based on LangGraph"
dependencies = [
    "langgraph>=0.0.1",
    "langchain>=0.1.0",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-mcp-adapters",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "PyYAML"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
